--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build && npm run postbuild",
-    "postbuild": "copyfiles -u 3 \"dist/danielou-portfolio/server/**/*\" netlify/functions/ssr-app && copyfiles -u 3 \"dist/danielou-portfolio/browser/**/*\" netlify/functions/ssr-app/browser && copyfiles -u 3 \"dist/danielou-portfolio/server/polyfills.server.mjs\" netlify/functions && copyfiles -u 3 \"dist/danielou-portfolio/server/polyfills.server.mjs\" netlify/functions/ssr-app && node scripts/patch-server-files.cjs",
+    "postbuild": "copyfiles -u 3 \"dist/danielou-portfolio/server/**/*\" netlify/functions/ssr-app && copyfiles -u 3 \"dist/danielou-portfolio/browser/**/*\" netlify/functions/ssr-app/browser && copyfiles -u 3 \"dist/danielou-portfolio/server/polyfills.server.mjs\" netlify/functions && copyfiles -u 3 \"dist/danielou-portfolio/server/polyfills.server.mjs\" netlify/functions/ssr-app && node scripts/patch-server-files.cjs && rm -f netlify/functions/polyfills.server* && rm -f netlify/functions/ssr-app/polyfills.server*",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:danielou-portfolio": "node dist/danielou-portfolio/server/server.mjs",
