--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^19.2.15",
     "@angular/ssr": "^19.2.15",
     "@google/generative-ai": "^0.24.1",
+    "@netlify/angular-runtime": "^2.4.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
