fix: Resolve Angular build errors by disabling prerendering and isolating Netlify server.ts

--- a/angular.json
+++ b/angular.json
@@ -29,9 +29,9 @@
             ],
             "scripts": [],
             "server": "src/main.server.ts",
-            "prerender": true,
+            "prerender": false,
             "ssr": {
-              "entry": "server.ts"
+              "entry": "src/main.server.ts"
             }
           },
           "configurations": {
